Update website to HT26 Committee and President's Introduction with some placeholders left for some Committee

--- a/css/main.css
+++ b/css/main.css
@@ -2794,6 +2794,11 @@ body.oxford-page {
     background-color: #FAA61A !important;
     color: white;
 }
+.badge-ht-term-2026 {
+    background-color: purple !important;
+    color: white;
+}
+
 
 /* Accordion Styling */
 .accordion {
